Add pm light location
