# autogen/openapi_server/controllers/default_controller.py
@@ -2,10 +2,24 @@ import connexion
 import six
 
 from openapi_server.models.building_full import BuildingFull  # noqa: E501
+from openapi_server.models.light_location import LightLocation  # noqa: E501
+from openapi_server.models.pm_average import PMAverage  # noqa: E501
 from openapi_server.models.security_img import SecurityImg  # noqa: E501
 from openapi_server.models.security_location import SecurityLocation  # noqa: E501
-from openapi_server.models.test_from_mark import TestFromMark  # noqa: E501
 from openapi_server import util
+
+
+def controller_get_average_pm(location_id):  # noqa: E501
+    """Provide the latitude and lontitude of light location
+
+     # noqa: E501
+
+    :param location_id: 
+    :type location_id: int
+
+    :rtype: PMAverage
+    """
+    return 'do some magic!'
 
 
 def controller_get_building_detail(location_id):  # noqa: E501
@@ -21,13 +35,15 @@ def controller_get_building_detail(location_id):  # noqa: E501
     return 'do some magic!'
 
 
-def controller_get_sample():  # noqa: E501
-    """Returns a list of basins.
+def controller_get_light_location(location_id):  # noqa: E501
+    """Provide the latitude and lontitude of light location
 
      # noqa: E501
 
+    :param location_id: 
+    :type location_id: int
 
-    :rtype: List[TestFromMark]
+    :rtype: LightLocation
     """
     return 'do some magic!'
 
