# autogen/openapi_server/models/__init__.py
@@ -3,12 +3,10 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from openapi_server.models.basin_full import BasinFull
-from openapi_server.models.basin_short import BasinShort
 from openapi_server.models.building_full import BuildingFull
+from openapi_server.models.light_location import LightLocation
+from openapi_server.models.pm_average import PMAverage
 from openapi_server.models.security_img import SecurityImg
 from openapi_server.models.security_location import SecurityLocation
-from openapi_server.models.station_anual import StationAnual
-from openapi_server.models.station_full import StationFull
 from openapi_server.models.station_short import StationShort
 from openapi_server.models.test_from_mark import TestFromMark
